# unfuckify

./: CMakeLists.txt  README.md  fuckery1.cpp  fuckery2.cpp  main.cpp  test.cpp
